Code improvements: Remove inline CSS, enhance JS with better effects, clean up structure

--- a/about/index.html
+++ b/about/index.html
@@ -64,32 +64,26 @@
       <h3>Programlama Becerileri</h3>
       <ul class="programming-skills">
         <li>
-          <img src="https://cdn.worldvectorlogo.com/logos/html-1.svg" alt="HTML logo" title="HTML">
+          <img src="https://skillicons.dev/icons?i=html" alt="HTML logo" title="HTML">
         </li>
         <li>
-          <img src="https://cdn.worldvectorlogo.com/logos/css-3.svg" alt="CSS logo" title="CSS">
+          <img src="https://skillicons.dev/icons?i=css" alt="CSS logo" title="CSS">
         </li>
         <li>
-          <img src="https://cdn.worldvectorlogo.com/logos/javascript-1.svg" alt="JavaScript logo" title="JavaScript">
+          <img src="https://skillicons.dev/icons?i=js" alt="JavaScript logo" title="JavaScript">
         </li>
         <li>
-          <img src="https://cdn.worldvectorlogo.com/logos/jee-3.svg" alt="Java logo" title="Java">
+          <img src="https://skillicons.dev/icons?i=c" alt="C logo" title="C">
         </li>
         <li>
-          <img src="https://cdn.worldvectorlogo.com/logos/c-1.svg" alt="C logo" title="C">
+          <img src="https://skillicons.dev/icons?i=cs" alt="C# logo" title="C#">
         </li>
         <li>
-          <img src="https://cdn.worldvectorlogo.com/logos/c--4.svg" alt="C# logo" title="C#">
+          <img src="https://img.icons8.com/color/50/microsoft-sql-server.png" alt="Microsoft SQL Server logo"
+        title="Microsoft SQL Server">
         </li>
         <li>
-          <img src="https://cdn.worldvectorlogo.com/logos/microsoft-sql-server-1.svg" alt="Microsoft SQL Server logo"
-            title="Microsoft SQL Server">
-        </li>
-        <li>
-          <img src="https://cdn.worldvectorlogo.com/logos/blazor.svg" alt="Blazor logo" title="Blazor">
-        </li>
-        <li>
-          <img src="https://cdn.worldvectorlogo.com/logos/python-5.svg" alt="Python logo" title="Python">
+          <img src="https://skillicons.dev/icons?i=py" alt="Python logo" title="Python">
         </li>
       </ul>
     </section>
