--- a/contact/index.html
+++ b/contact/index.html
@@ -71,7 +71,7 @@
                 <hr>
                 <div id="dislike-checkboxes">
                     <h3>Hangi sayfaları beğenmediniz:</h3>
-                    <input type="checkbox" name="disliked-pages[][]" id="home-dislike" value="home">
+                    <input type="checkbox" name="disliked-pages[]" id="home-dislike" value="home">
                     <label for="home-dislike">Anasayfa</label>
                     <input type="checkbox" name="disliked-pages[]" id="about-dislike" value="about">
                     <label for="about-dislike">Hakkımda</label>
@@ -103,7 +103,7 @@
                 <h2>Üniversite Konum</h2>
                 <!-- Loading lazy kullanıldığında iframe ögesi sayfa yüklenirken yüklenir. -->
                 <iframe id="location-iframe" loading="lazy" src=""
-                    title="İstanbul Üniversitesi-Cerrahpaşa Teknik Bilimler MYO Konum"></iframe>
+                    title="İstanbul Üniversitesi-Cerrahpaşa Teknik Bilimler MYO Konum">
                 </iframe>
             </section>
         </section>
