--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Security-Policy"
     content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; frame-src 'self' https://scratch.mit.edu;">
-  <meta name=" description"
+  <meta name="description"
     content="Kişisel web sitem. Hakkımda, iş deneyimi, projelerim ve iletişim sayfalarım burada." />
   <meta name="keywords" content="web geliştirme, yazılım, projeler, iş deneyimi, iletişim" />
   <meta name="author" content="Yusuf Sevinçhan" />
@@ -38,7 +38,7 @@
       <p>
         Web geliştirme ve yazılım konularında çalışmalar yapıyorum. Bu
         sitemde hakkımda, iş deneyimim, projelerim ve iletişim bilgilerim
-        bulunmaktadır.</b>
+        bulunmaktadır.
       </p>
     </section>
     <!-- My Game from scratch -->
